--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <section id="home" class="">
+    <section id="home">
         <div class="home">
         </div>
         <div class="container">
@@ -49,16 +49,17 @@
                     <img src="/img/my-photo.jpg" alt="photo" class="img-fluid my-img rounded-circle w-25" >
                     <span class="lead text-white mt-2">Hi Myself</span>
                     <p class="name">Afroz Ahmed</p>
-                    <p class="full-stack">Full Stack Web Developer</p>
-                    <p class="lead text-white">Welcome To My Portfolio</p>
-                    <a href="#contact" class="btn btn-lg contact-btn mt-4">GET IN TOUCH</a>
+                    <p class="full-stack">Full Stack Developer</p>
+                    <p class="lead text-white welcome-to">Welcome To My Portfolio</p>
+                    <div class="text-white pb-3 pt-4">Interested in working together</div>
+                    <a href="#contact" class="btn contact-btn">GET IN TOUCH</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section id="about" class="pt-5">
-        <div class="container pt-3">
+    <section id="about" class="py-5">
+        <div class="container pt-3 pb-4">
             <div class="row">
                 <div class="col-md-10 mx-auto">
                     <div class="row">
@@ -77,8 +78,8 @@
         </div>
     </section>
 
-    <section id="projects" class="py-4">
-        <div class="container pt-4">
+    <section id="projects" class="py-5">
+        <div class="container pt-3">
             <h1 class="my-work underline mb-5">My Recent Works</h1>
             <div class="row">
                 <div class="col-md-8 mx-auto text-center">
@@ -89,19 +90,34 @@
                                 <img src="/img/Screenshot (46).png" alt="" class="img-fluid my-work-img">
                             </div>
                         </a>
-                        <a href="https://shoppingnekoapp.herokuapp.com/products" target="_blank">
-                            <h3 class="mt-3 e-commerce">E-Commerce</h3>
-                        </a>
+                        <div class="row mt-3">
+                            <div class="col-md-6">
+                                <a href="https://shoppingnekoapp.herokuapp.com/products" target="_blank">
+                                <h3 class="e-commerce">E-commerce</h3>
+                            </a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://github.com/afroz214/e-commercer" class="btn view-code-btn" target="_blank">View Code</a>
+                            </div>
                         </div>
+                        </div>
+                        <div class="col-1"></div>
                         <div class="col-5">
                             <a href="https://socialappinstaclone.herokuapp.com" target="_blank">
                             <div class="work-card card border border-dark p-2">
                                 <img src="/img/Screenshot (48).png" alt="No-Pic" class="img-fluid my-work-img">
                             </div>
                         </a>
-                        <a href="https://socialappinstaclone.herokuapp.com" target="_blank">
-                            <h3 class="mt-3 e-commerce">Social App</h3>
-                        </a>
+                        <div class="row mt-3">
+                            <div class="col-md-6">
+                                <a href="https://socialappinstaclone.herokuapp.com" target="_blank">
+                                <h3 class="e-commerce">Social App</h3>
+                            </a>
+                            </div>
+                            <div class="col-md-6">
+                                <a href="https://github.com/afroz214/Insta-clone" class="btn view-code-btn" target="_blank">View Code</a>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
@@ -133,7 +149,7 @@
                         </div>
                         </div>
                     </div>
-                    <div class="col-md-4 react">
+                    <div class="col-md-4 react my-3">
                         <div class="card border border-dark card-body text-center">
                             <div class="">
                             <img src="/img/React.png" alt="" class="img-fluid" width="50">
@@ -143,7 +159,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center pt-3">
+                <div class="row justify-content-center">
                     <div class="col-sm-6 col-md-4 node">
                         <div class="card border border-dark card-body text-center">
                             <div class="">
@@ -168,9 +184,9 @@
         </div>
     </section>
 
-    <section id="contact" class="pb-5">
-        <div class="container pt-4">
-            <h1 class="my-contact underline py-4">Contacts</h1>
+    <section id="contact" class="py-5">
+        <div class="container">
+            <h1 class="my-contact underline mb-4">Contacts</h1>
             <div class="row justify-content-center text-center">
                 <div class="col-sm-2">
                     <a href="https://github.com/afroz214" target="_blank">
